# pecrab

./: .clippy.toml  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.git-hooks/: README.md  pre-push
.github/workflows/: test.yml
benches/: README.md  engine.rs
prompts/: gh_job_for_upload_bench.md  global_mem_budget_strategy.md  refact_benchmark.md  refact_for_parallel_exec.md  refact_readme.md  tests_sample_generation.md  use_indexmap.md
src/: engine.rs  env.rs  errors.rs  lib.rs  main.rs  mem_budget.rs  models.rs  parallel.rs
tests/: generate_sample.sh  integration_test.rs
tests/data/: sample_02_deposits_and_withdrawals_succeed.csv  sample_02_out.csv  sample_03_insufficient_funds_withdrawals.csv  sample_03_out.csv  sample_04_dispute_then_resolve.csv  sample_04_out.csv  sample_05_dispute_chargeback_account_locks.csv  sample_05_out.csv  sample_06_multi_dispute_all_resolved.csv  sample_06_out.csv  sample_07_dispute_mixed_resolve_chargeback.csv  sample_07_out.csv  sample_08_ignore_nonexistent_dispute.csv  sample_08_out.csv  sample_09_out.csv  sample_09_resolve_not_disputed_noop.csv  sample_10_out.csv  sample_10_single_client_many_ops.csv  sample_11_many_clients_single_tx.csv  sample_11_out.csv  sample_12_interleaved_clients.csv  sample_12_out.csv  sample_97_out.csv  sample_98_100k_transactions.csv  sample_98_out.csv  sample_99_1k_transactions.csv  sample_99_out.csv
