[package]
name = "pecrab"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "warn"
todo = "warn"
unnecessary_self_imports = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

[dependencies]
anyhow = "1.0.102"
csv = "1.4.0"
rust_decimal = "1.41.0"
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "engine"
harness = false
